[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = writ
version = 0.0.1
author = Aleksander Evren Paetzold Durumeric
author_email = alekepd@gmail.com
description = A collection of iterable read write interfaces to array data saved on disk.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alekepd/writ
project_urls =
    Bug Tracker = https://github.com/alekepd/writ/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    typing_extensions

[options.extras_require]
test = 
    pytest

[options.packages.find]
where = src
